worked on preferences service
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1468 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
@@ -144,6 +144,7 @@
 
             private function addUser() : void {
                 dispatchEvent(new UserEvent(UserEvent.ADD_USER));
+                usernameTi.setFocus();
             }
 
             private function deleteUser() : void {
