--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/SettingManagementView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/SettingManagementView.mxml
@@ -22,107 +22,96 @@
  */
 -->
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" backgroundColor="#C2DAEF" creationComplete="onCreate()">
-    <mx:states>
-        <mx:State name="BooleanState">
-            <mx:RemoveChild target="{textinput1}"/>
-            <mx:AddChild relativeTo="{panel1}" position="lastChild">
-                <mx:CheckBox x="178" y="139" label="Checkbox"/>
-            </mx:AddChild>
-        </mx:State>
-        <mx:State name="ModuleScope">
-            <mx:SetProperty target="{hrule1}" name="y" value="194"/>
-            <mx:SetProperty target="{textinput1}" name="y" value="166"/>
-            <mx:SetProperty target="{combobox1}" name="y" value="140"/>
-            <mx:SetProperty target="{savePropertyBtn}" name="y" value="204"/>
-            <mx:SetProperty target="{textarea1}" name="y" value="88"/>
-            <mx:SetProperty target="{label1}" name="y" value="89"/>
-            <mx:SetProperty target="{label2}" name="y" value="142"/>
-            <mx:SetProperty target="{label3}" name="y" value="168"/>
-            <mx:AddChild relativeTo="{label1}" position="before">
-                <mx:Label x="10" y="62" text="Module" fontWeight="bold"/>
-            </mx:AddChild>
-            <mx:AddChild relativeTo="{label4}" position="before">
-                <mx:ComboBox text="{modelLocator.selectedUser.username}" width="228" x="178" y="60"/>
-            </mx:AddChild>
-        </mx:State>
-        <mx:State name="RoleScope">
-            <mx:SetProperty target="{hrule1}" name="y" value="196"/>
-            <mx:SetProperty target="{textinput1}" name="y" value="168"/>
-            <mx:SetProperty target="{combobox1}" name="y" value="142"/>
-            <mx:SetProperty target="{savePropertyBtn}" name="y" value="206"/>
-            <mx:SetProperty target="{label1}" name="y" value="91"/>
-            <mx:SetProperty target="{label2}" name="y" value="144"/>
-            <mx:SetProperty target="{label3}" name="y" value="170"/>
-            <mx:SetProperty target="{textarea1}" name="y" value="90"/>
-            <mx:AddChild relativeTo="{label1}" position="before">
-                <mx:Label x="10" y="62" text="Role" fontWeight="bold"/>
-            </mx:AddChild>
-            <mx:AddChild relativeTo="{label4}" position="before">
-                <mx:ComboBox text="{modelLocator.selectedUser.username}" width="228" x="178" y="60"/>
-            </mx:AddChild>
-        </mx:State>
-    </mx:states>
 
     <mx:Metadata>
         [Name]
         [ManagedEvent(name="LOAD_ALL_PROPERTIES")]
+        [ResourceBundle("appMain")]
+        [ResourceBundle("appEntity")]
     </mx:Metadata>
 
     <mx:Script>
         <![CDATA[
+        	import mx.events.ListEvent;
+
+        	import org.openwms.web.flex.client.model.PreferencesModel;
+        	import org.openwms.core.domain.system.AbstractPreference;
         	import org.openwms.web.flex.client.event.PropertyEvent;
-        	import org.openwms.web.flex.client.model.ModelLocator;
-        
+            import org.openwms.web.flex.client.util.I18nUtil;
+
             [Inject]
             [Bindable]
             /**
              * Injected Model.
              */
-            public var modelLocator : ModelLocator;
+            public var prefs : PreferencesModel;
+            [Bindable]
+            private var selected : AbstractPreference;
         
             private function onCreate() : void {
+                reload();
+            }
+            
+            private function reload() : void {
                 dispatchEvent(new PropertyEvent(PropertyEvent.LOAD_ALL_PROPERTIES));
+            }
+            
+            private function onSelect(event : ListEvent) : void {
+            	selected = event.currentTarget as AbstractPreference;
             }
         ]]>
     </mx:Script>
     <mx:HBox x="10" y="10" width="95%" verticalAlign="middle" backgroundColor="#FFA6A6">
-        <mx:Label x="10" y="10" text="Properties" fontSize="24"/>
+        <mx:Label x="10" y="10" text="{I18nUtil.trans(I18nUtil.APP_MAIN, 'txt_preferences_screen_header')}" fontSize="24"/>
         <mx:VRule height="10"/>
-        <mx:Button id="addRoleBtn" buttonMode="true" mouseChildren="false" toolTip="Create a new Role" icon="@Embed(source='/assets/images/Users--plus.png')"/>
+        <mx:Button id="addBtn" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_add_pref')}" icon="@Embed(source='/assets/images/Users--plus.png')"/>
         <mx:VRule height="10"/>
-        <mx:Button id="removeRoleBtn" buttonMode="true" mouseChildren="false" toolTip="Delete an existing Role" icon="@Embed(source='/assets/images/Users--minus.png')"/>
+        <mx:Button id="deleteBtn" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_delete_user')}" icon="@Embed(source='/assets/images/Users--minus.png')"/>
         <mx:VRule height="10"/>
-        <mx:Button id="saveRoleBtn" buttonMode="true" mouseChildren="false" toolTip="Save a modified Role" icon="@Embed(source='/assets/images/Users--save.png')"/>
+        <mx:Button id="saveBtn" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_save_user')}" icon="@Embed(source='/assets/images/Users--save.png')"/>
         <mx:VRule height="10"/>
-        <mx:Button id="refreshRoleBtn" buttonMode="true" mouseChildren="false" toolTip="Refresh the list of Roles" icon="@Embed(source='assets/images/icons/refresh.png')"/>
+        <mx:Button id="reloadBtn" click="reload();" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_reload_users')}" icon="@Embed(source='assets/images/icons/refresh.png')"/>
     </mx:HBox>
     <mx:HRule x="9" y="53" width="95%"/>
-    <mx:HBox x="10" y="63" width="95%" height="95%">
-        <mx:Accordion x="10" y="63" width="207" height="80%">
-            <mx:Canvas label="Application Properties" width="100%" height="100%">
-                <mx:List x="0" y="0" dataProvider="{modelLocator.allApplicationProperties}" alternatingItemColors="[#EEEEEE, #FFFFFF]" width="100%" height="100%"></mx:List>
+    <mx:HBox x="10" y="63" width="95%" height="100%">
+        <mx:Accordion x="10" y="63" width="300" height="95%">
+            <mx:Canvas label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_preferences_screen_app_prefs')}" width="100%" height="100%">
+                <mx:List id="appPrefsLst" labelField="key" dataProvider="{prefs.appPrefs}" change="onSelect(event)" alternatingItemColors="[#EEEEEE, #FFFFFF]" width="100%" height="100%" x="0" y="0" />
             </mx:Canvas>
-            <mx:Canvas label="Module Properties" width="100%" height="100%">
-                <mx:List x="0" y="0" alternatingItemColors="[#EEEEEE, #FFFFFF]" width="100%" height="100%"></mx:List>
+            <mx:Canvas label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_preferences_screen_module_prefs')}" width="100%" height="100%">
+                <mx:List id="modPrefsLst" labelField="key" dataProvider="{prefs.modulePrefs}" change="onSelect(event)" alternatingItemColors="[#EEEEEE, #FFFFFF]" width="100%" height="100%" x="0" y="0" />
             </mx:Canvas>
-            <mx:Canvas label="Role Properties" width="100%" height="100%">
-                <mx:List x="0" y="0" alternatingItemColors="[#EEEEEE, #FFFFFF]" width="100%" height="100%"></mx:List>
+            <mx:Canvas label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_preferences_screen_user_prefs')}" width="100%" height="100%">
+                <mx:List id="userPrefsLst" labelField="key" dataProvider="{prefs.userPrefs}" change="onSelect(event)" alternatingItemColors="[#EEEEEE, #FFFFFF]" width="100%" height="100%" x="0" y="0" />
             </mx:Canvas>
         </mx:Accordion>
-        <mx:Panel x="218" y="63" height="80%" layout="absolute" title="Details" width="100%" id="panel1">
-            <mx:TextInput text="{modelLocator.selectedUser.username}" width="228" x="178" y="8"/>
-            <mx:TextInput text="{modelLocator.selectedUser.username}" width="228" x="178" y="139" id="textinput1"/>
-            <mx:ComboBox dataProvider="{modelLocator.allApplicationProperties}" width="228" x="178" y="113" id="combobox1">
-            </mx:ComboBox>
-            <mx:ComboBox text="{modelLocator.selectedUser.username}" width="228" x="178" y="34"/>
-            <mx:Label x="10" y="10" text="Property Name" fontWeight="bold" id="label4"/>
-            <mx:Label x="10" y="36" text="Scope" fontWeight="bold"/>
-            <mx:Label x="10" y="62" text="Description" id="label1"/>
-            <mx:Label x="10" y="115" text="Type" id="label2"/>
-            <mx:Label x="10" y="141" text="Value" id="label3"/>
-            <mx:TextArea x="178" y="61" width="228" id="textarea1"/>
-            <mx:HRule x="10" y="167" width="95%" id="hrule1"/>
-            <mx:Button id="savePropertyBtn" buttonMode="true" mouseChildren="false" toolTip="Save a modified Role" icon="@Embed(source='/assets/images/Users--save.png')" x="178" y="177"/>
+        <mx:Panel id="detailsPnl" title="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_preferences_screen_details')}" height="95%" layout="absolute" width="100%">
+            <mx:Label  id="keyLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_key')}" fontWeight="bold" x="10" y="10" />
+            <mx:TextInput id="keyTxt" text="{selected.key}" width="228" x="178" y="8"/>
+            
+            <mx:Label id="ownerLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_owner')}" fontWeight="bold" x="10" y="36" />
+            <mx:TextInput id="ownerTxt" text="{selected.owner}" width="228" x="178" y="34"/>
+
+            <mx:Label id="descriptionLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_description')}" x="10" y="62" />
+            <mx:TextArea id="textarea1" text="{selected.description}" x="178" y="61" width="228" />
+
+            <mx:Label id="typeLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_type')}" x="10" y="115" />
+            <mx:ComboBox id="typeCmb" width="228" x="178" y="113" />
+
+            <mx:Label id="valueLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_value')}" x="10" y="141" />
+            <mx:TextInput id="valueTxt" text="{selected.value}" width="228" x="178" y="139" />
+
+            <mx:Label id="floatValueLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_floatValue')}" x="10" y="167" />
+            <mx:TextInput id="floatValueTxt" text="{selected.floatValue}" width="228" x="178" y="165" />
+
+            <mx:Label id="minimumLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_minimum')}" x="10" y="193" />
+            <mx:TextInput id="minimumTxt" text="{selected.minimum}" width="228" x="178" y="191" />
+
+            <mx:Label id="maximumLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_maximum')}" x="10" y="219" />
+            <mx:TextInput id="maximumTxt" text="{selected.maximum}" width="228" x="178" y="215" />
+
+            <mx:HRule id="hrule1" x="12" y="245" width="95%" />
+            <mx:Button id="saveBtn2" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_save_user')}" icon="@Embed(source='/assets/images/Users--save.png')" x="178" y="255"/>
         </mx:Panel>
     </mx:HBox>
 </mx:Canvas>
