Worked on preferences, substituted hard coded version in header files
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1475 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
@@ -70,13 +70,16 @@
             }
             
             private function onLogin(username : String, password : String) : void {
+                var event : ApplicationEvent;
                 if (modelLocator.SCREEN_LOCKED) {
                     if (modelLocator.viewLockedBy == username) {
-                        dispatchEvent(new ApplicationEvent(ApplicationEvent.APP_UNLOCK));
+                        event = new ApplicationEvent(ApplicationEvent.APP_UNLOCK);
+                        event.data = {username:username, password:password};
+                        dispatchEvent(event);
                     }
                     return;
                 }
-                var event : ApplicationEvent = new ApplicationEvent(ApplicationEvent.APP_REQUEST_LOGIN);
+                event = new ApplicationEvent(ApplicationEvent.APP_REQUEST_LOGIN);
                 event.data = {username:username, password:password};
                 dispatchEvent(event);
             }
